--- a/customer_segmentation.ipynb
+++ b/customer_segmentation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIiMqXVuxxsqQUtmSxYVWj",
+      "authorship_tag": "ABX9TyO55ssJU5sfHwfv/pyHcCSI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "aIdtbo6BbY1s"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
         "id": "_slKk11Lqfj6",
         "outputId": "4e8938d9-516b-4c08-913b-9f909e57c5bb"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "0t7Dj1hUqzMz"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
         "id": "-pepNKDfq9pk",
         "outputId": "0ddb10c1-58ea-4317-8bba-5b09c7effb50"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +301,7 @@
         "id": "vo5mt1dmPS9D",
         "outputId": "f0e08d4d-e222-4945-eb1d-ee4f317e9fc0"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +328,7 @@
         "id": "u9j7Zi51Pd9e",
         "outputId": "bc528f42-e835-402e-9385-7845245c7c70"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +353,7 @@
         "id": "shgAQOwq4Ufl",
         "outputId": "23b90a8d-1c42-4f5c-f021-b8772db17407"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +379,7 @@
         "id": "GF5NpFsdz7nm",
         "outputId": "f4c818c0-18f7-47e2-de5e-c9eb46806896"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +406,7 @@
         "id": "AvqvEM6zPyUa",
         "outputId": "61f345ad-5249-4b41-8dd8-3ac178ca305b"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,7 +444,7 @@
         "id": "LXtYAi7XW6tF",
         "outputId": "2be03cae-ec8d-4506-cdec-11e966eb1c3e"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,247 +478,8 @@
       "metadata": {
         "id": "-l_4qVG0y-RB"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "customers"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 423
-        },
-        "id": "QZZmMCONzSk7",
-        "outputId": "610bff0f-795d-49f8-d8fe-eb59f4d4f737"
-      },
-      "execution_count": 63,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "     CustomerID  Gender  Age  Annual Income (k$)  Spending Score (1-100)\n",
-              "0             1       1   19                  15                      39\n",
-              "1             2       1   21                  15                      81\n",
-              "2             3       0   20                  16                       6\n",
-              "3             4       0   23                  16                      77\n",
-              "4             5       0   31                  17                      40\n",
-              "..          ...     ...  ...                 ...                     ...\n",
-              "195         196       0   35                 120                      79\n",
-              "196         197       0   45                 126                      28\n",
-              "197         198       1   32                 126                      74\n",
-              "198         199       1   32                 137                      18\n",
-              "199         200       1   30                 137                      83\n",
-              "\n",
-              "[200 rows x 5 columns]"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-b4bcab3a-f386-4676-acfd-5ed8832d7c01\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>CustomerID</th>\n",
-              "      <th>Gender</th>\n",
-              "      <th>Age</th>\n",
-              "      <th>Annual Income (k$)</th>\n",
-              "      <th>Spending Score (1-100)</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>19</td>\n",
-              "      <td>15</td>\n",
-              "      <td>39</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>21</td>\n",
-              "      <td>15</td>\n",
-              "      <td>81</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>0</td>\n",
-              "      <td>20</td>\n",
-              "      <td>16</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4</td>\n",
-              "      <td>0</td>\n",
-              "      <td>23</td>\n",
-              "      <td>16</td>\n",
-              "      <td>77</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5</td>\n",
-              "      <td>0</td>\n",
-              "      <td>31</td>\n",
-              "      <td>17</td>\n",
-              "      <td>40</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>195</th>\n",
-              "      <td>196</td>\n",
-              "      <td>0</td>\n",
-              "      <td>35</td>\n",
-              "      <td>120</td>\n",
-              "      <td>79</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>196</th>\n",
-              "      <td>197</td>\n",
-              "      <td>0</td>\n",
-              "      <td>45</td>\n",
-              "      <td>126</td>\n",
-              "      <td>28</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>197</th>\n",
-              "      <td>198</td>\n",
-              "      <td>1</td>\n",
-              "      <td>32</td>\n",
-              "      <td>126</td>\n",
-              "      <td>74</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>198</th>\n",
-              "      <td>199</td>\n",
-              "      <td>1</td>\n",
-              "      <td>32</td>\n",
-              "      <td>137</td>\n",
-              "      <td>18</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>199</th>\n",
-              "      <td>200</td>\n",
-              "      <td>1</td>\n",
-              "      <td>30</td>\n",
-              "      <td>137</td>\n",
-              "      <td>83</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>200 rows × 5 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b4bcab3a-f386-4676-acfd-5ed8832d7c01')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-b4bcab3a-f386-4676-acfd-5ed8832d7c01 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b4bcab3a-f386-4676-acfd-5ed8832d7c01');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 63
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -737,7 +498,7 @@
       "metadata": {
         "id": "vS6lB5us3XPf"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -748,7 +509,7 @@
       "metadata": {
         "id": "l0WKCi-l4L8Q"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -775,7 +536,7 @@
         "id": "K-pgPCko5uRz",
         "outputId": "28d4ccf9-8259-4919-f2d8-d66fc9d7a241"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,7 +585,7 @@
       "metadata": {
         "id": "5vnMQewdr1v_"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -840,7 +601,7 @@
         "id": "SarBe--Lr60o",
         "outputId": "1bb4ca10-ed16-4048-d683-8fae88c68b6a"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1017,7 +778,7 @@
         "id": "scO2gwot-VlR",
         "outputId": "7bcfe7cc-b729-4f18-a573-1da96efeab84"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1049,7 +810,7 @@
       "metadata": {
         "id": "xwa_bGObsweW"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1064,7 +825,7 @@
         "id": "f0iFrnFLs1VX",
         "outputId": "d005e62a-14f6-4120-ad72-2c470b0f0b05"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,7 +868,7 @@
         "id": "4wQR2upDtnaw",
         "outputId": "7cf8b3ad-8b5e-42da-9316-e3eb0ea1507f"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1132,7 +893,7 @@
         "id": "-mF4PPrMtzxd",
         "outputId": "fd9f949c-bc43-4f42-ec73-159b66e455c2"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1345,7 +1106,7 @@
       "metadata": {
         "id": "e5JZCoiv0HRI"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1358,7 +1119,7 @@
       "metadata": {
         "id": "Zf4CiQvB535L"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1373,7 +1134,7 @@
         "id": "8ST0nHGF5PFF",
         "outputId": "201148dc-5eda-4fe9-eb40-f88f9b85dc98"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1411,7 +1172,7 @@
         "id": "1hH9CJ4n5UVO",
         "outputId": "94657a15-8076-4bca-f315-e288b42bf09e"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1626,7 +1387,7 @@
         "id": "vZxZKeTLvYcu",
         "outputId": "7b752eca-8771-48c8-de75-2b3e19517066"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1649,6 +1410,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**4.Testnig algorithm**"
+      ],
+      "metadata": {
+        "id": "XVwuZc3j4MVV"
+      }
     }
   ]
 }
